# stars

./: .gitignore  Cargo.toml  names.csv
src/: app.rs  components.rs  crossterm.rs  entities.rs  errors.rs  game.rs  keymaps.rs  lib.rs  main.rs  resource.rs  resources.rs  tech.rs  ui.rs  utils.rs
src/entities/: query.rs
src/utilities/: names.rs
tests/: entities.rs  resources.rs
