[package]
name = "stars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crossterm = "0.25.0"
log = "0.4.17"
memmap = "0.7.0"
nalgebra = "0.32.1"
rand = "0.8.5"
rstest = "0.16.0"
termion = "2.0.1"
tui = "0.19.0"
tui-tree-widget = "0.11.0"
