[package]
name = "stars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
chrono = "0.4.24"
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
tui = "0.19.0"
unicode-width = "0.1.10"
